fix header text align

--- a/components/Detail/Detail.module.css
+++ b/components/Detail/Detail.module.css
@@ -35,6 +35,7 @@
   align-items: center;
   justify-content: center;
   gap: 0.8rem;
+  text-align: center;
 }
 
 .hero h2 svg {
